force-app/main/default/objects/ChargeOver_Quote_Line_Item__c/ChargeOver_Quote_Line_Item__c.object-meta.xml
<CustomObject>
    <label>ChargeOver Quote Line Item</label>
    <nameField>
        <label>ChargeOver Quote Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChargeOver Quote Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>