force-app/main/default/objects/ChargeOver_Quote_Line_Item__c/fields/Applied_Account__c.field-meta.xml
<CustomField>
    <fullName>Applied_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Primary (Personal) or Secondary (Business) Account that the ChargeOver Subscription Line Item was purchased to</description>
    <label>Applied Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ChargeOver Quote Line Items (Applied Account)</relationshipLabel>
    <relationshipName>ChargeOver_Quote_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>