force-app/main/default/objects/ChargeOver_Quote_Line_Item__c/fields/ChargeOver_Quote__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChargeOver Quote</label>
    <referenceTo>ChargeOver_Quote__c</referenceTo>
    <relationshipLabel>ChargeOver Quote Line Items</relationshipLabel>
    <relationshipName>ChargeOver_Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>