force-app/main/default/objects/ChargeOver_Quote_Line_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>65535</length>
    <type>LongTextArea</type>
</CustomField>