force-app/main/default/objects/ChargeOver_Quote_Line_Item__c/fields/HTML_Description__c.field-meta.xml
<CustomField>
    <fullName>HTML_Description__c</fullName>
    <description>the sales, marketing, and quote description of the product</description>
    <label>HTML Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>