force-app/main/default/objects/ChargeOver_Quote_Line_Item__c/fields/of_Free_Trial_Cycles_Cycles_to_Skip__c.field-meta.xml
<CustomField>
    <fullName>of_Free_Trial_Cycles_Cycles_to_Skip__c</fullName>
    <label># of Free Trial Cycles / Cycles to Skip</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>