force-app/main/default/objects/ChargeOver_Quote_Line_Item__c/fields/of_Monthly_Bookkeeping_Transactions__c.field-meta.xml
<CustomField>
    <fullName>of_Monthly_Bookkeeping_Transactions__c</fullName>
    <description>The number of monthly bookkeeping transactions selected in the pricing calculator</description>
    <label># of Monthly Bookkeeping Transactions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-75</fullName>
            </value>
            <value>
                <fullName>76-150</fullName>
            </value>
            <value>
                <fullName>151-250</fullName>
            </value>
            <value>
                <fullName>251-500</fullName>
            </value>
            <value>
                <fullName>501-750</fullName>
            </value>
            <value>
                <fullName>751-1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>