force-app/main/default/objects/ChargeOver_Quote_Line_Item__c/fields/of_times_this_should_recur__c.field-meta.xml
<CustomField>
    <fullName>of_times_this_should_recur__c</fullName>
    <label># of times this should recur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>