force-app/main/default/objects/ChargeOver_Quote_Line_Item__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <description>Invoice and technical description of the product</description>
    <label>Product Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>